# timescaledb-backfill

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker.yaml  release-please.yaml
src/: caggs.rs  claim_source_chunk.sql  claim_source_chunk_for_copy.sql  claim_source_chunk_for_verification.sql  complete_source_chunk.sql  complete_source_chunk_verification.sql  connect.rs  execute.rs  features.rs  find_source_chunks.sql  find_target_chunk.sql  get_verify_query_select_columns.sql  insert_source_chunks.sql  logging.rs  main.rs  postgres.rs  prepare.rs  schema.sql  sql.rs  storage.rs  task.rs  telemetry.rs  timescale.rs  verify.rs  work_items.rs  workers.rs
test-common/: Cargo.toml
test-common/src/: assert_within.rs  config.rs  db_assert.rs  json_assert.rs  lib.rs  psql.rs  test_connection_string.rs  timescale_docker.rs
test-manual/: README.md  alter.sql  source.sh  source.sql  test.sh
tests/: cloud_init.sql  source_schema.sql
tests/integration/: config.rs  copy_data_from_chunks.rs  copy_data_from_compressed_chunks.rs  main.rs
