[workspace]
members = [
    "test-common",
]

[package]
name = "timescaledb-backfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std", "backtrace"] }
async-channel = "1.9.0"
bytes = { version = "1.4.0", default-features = false }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.2.7", default-features = false, features = ["std", "help", "error-context", "env", "derive"] }
console = "0.15.7"
ctrlc = "3.4.0"
futures-lite = { version = "1.13.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
human-repr = "1.1.0"
multimap = "0.9.0"
once_cell = "1.18.0"
predicates = "3.0.3"
rustls = { version = "0.21.1", features = ["dangerous_configuration", "tls12"], default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.28.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"], default-features = false }
tokio-postgres = { version = "0.7.8", features = ["runtime", "with-serde_json-1", "with-chrono-0_4"], default-features = false }
tokio-postgres-rustls = { version = "0.10.0", default-features = false }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "json", "std"] }

[dev-dependencies]
assert_cmd = "2.0.11"
postgres = "0.19.5"
pretty_env_logger = "0.5.0"
testcontainers = "0.14.0"
test-common = { path = "test-common" }
