[workspace]
members = [
    "test-common",
]

[package]
name = "timescaledb-backfill"
version = "0.2.2"
edition = "2021"

[profile.release]
debug = 1
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
async-channel = "1.9.0"
bytes = { version = "1.4.0", default-features = false }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.3.23", default-features = false, features = ["std", "help", "error-context", "env", "derive"] }
console = "0.15.7"
ctrlc = "3.4.0"
diffy = "0.3.0"
futures-lite = { version = "1.13.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
human-repr = "1.1.0"
multimap = "0.9.0"
once_cell = "1.18.0"
predicates = "3.0.3"
rustls = { version = "0.21.6", features = ["dangerous_configuration", "tls12"], default-features = false }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"], default-features = false }
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-serde_json-1", "with-chrono-0_4"], default-features = false }
tokio-postgres-rustls = { version = "0.10.0", default-features = false, git = "https://github.com/JamesGuthrie/tokio-postgres-rustls.git", rev = "ab1c17c71fe9fa3942f5f6e871d7657a15db10ce" }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "json", "std"] }

[dev-dependencies]
assert_cmd = "2.0.12"
postgres = "0.19.6"
pretty_env_logger = "0.5.0"
tap-reader = "1.0.1"
testcontainers = "0.14.0"
test-common = { path = "test-common" }
strip-ansi-escapes = "0.2.0"
