[package]
name = "timescaledb-backfill"
version = "0.12.1"
edition = "2021"

[profile.release]
debug = 1
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
async-channel = "1.9.0"
bytes = { version = "1.5.0", default-features = false }
clap = { version = "4.4.4", default-features = false, features = ["std", "help", "error-context", "env", "derive", "usage"] }
console = "0.15.7"
ctrlc = "3.4.1"
diffy = "0.3.0"
futures-lite = { version = "1.13.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
human-repr = "1.1.0"
lazy_static = "1.4.0"
multimap = "0.9.0"
once_cell = "1.18.0"
predicates = "3.0.4"
rustls = { version = "0.21.7", features = ["dangerous_configuration", "tls12"], default-features = false }
semver = "1.0.19"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"], default-features = false }
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-serde_json-1", "with-uuid-1"], default-features = false }
tokio-postgres-rustls = { version = "0.10.0", default-features = false, git = "https://github.com/JamesGuthrie/tokio-postgres-rustls.git", rev = "b78dda2a9a1a23d3dbed4ecded7defbbcd831b37" }
tokio-util = "0.7.9"
telemetry-client = { git = "ssh://git@github.com/timescale/telemetry-client.git", rev = "v0.1.2" }
tracing = { version = "0.1.37", default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "json", "std"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.12"
postgres = "0.19.7"
pretty_env_logger = "0.5.0"
reqwest = "0.11.22"
tap-reader = "1.0.1"
testcontainers = "0.14.0"
test-common = { git = "ssh://git@github.com/timescale/test-common.git", rev = "v0.21.0"}
strip-ansi-escapes = "0.2.0"
