[package]
name = "test-common"
version = "0.4.1"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
chrono = "0.4.26"
serde_json = "1.0.105"
tempfile = { version = "3.8.0", default-features = false }
tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"], default-features = false }
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-serde_json-1"], default-features = false }
tokio-postgres-rustls = { version = "0.10.0", default-features = false }
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
glob = "0.3.1"
log = "0.4.20"
postgres = "0.19.6"
predicates = "3.0.3"
pretty_env_logger = "0.4.0"
testcontainers = "0.14.0"
